--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="de" xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{mopslayout :: html(
-          name='Gruppenfindung',
-          title='Meine Gruppen',
-          headcontent=~{fragments/general :: headcontent},
-          navigation=~{fragments/general :: nav(current='index')},
-          bodycontent=~{:: bodycontent})}">
+<html lang="de" xmlns:th="http://www.thymeleaf.org" th:replace="~{mopslayout :: html(
+    name='Gruppenfindung',
+    title='Meine Gruppen',
+    headcontent=~{fragments/general :: headcontent(style='/index.css')},
+    navigation=~{fragments/general :: nav(current='index')},
+    bodycontent=~{:: bodycontent})}">
 
 <body>
 
@@ -15,17 +14,15 @@
         <h1 class="def-cursor">Meine Gruppen</h1>
 
         <!--Gruppenliste belegte Gruppen-->
-        <div class="mt-3" th:each="group: ${groups}">
-            <div class="content p-2">
-                <div class="content-heading">
-                    <a class="link" th:href="@{/gruppen2/details/{id}(id=${group.getId()})}"
-                       th:text="${group.getTitle()}"></a>
+        <div class="content" th:each="group: ${groups}">
+            <div class="content-heading">
+                <a class="link" th:href="@{/gruppen2/details/{id}(id=${group.getId()})}"
+                   th:text="${group.getTitle()}"></a>
 
-                    <span th:replace="~{fragments/gruppen :: badges}"></span>
-                </div>
-                <div class="content-text p-2">
-                    <span th:text="${group.getDescription()}"></span>
-                </div>
+                <span th:replace="~{fragments/gruppen :: badges}"></span>
+            </div>
+            <div class="content-text-in">
+                <span th:text="${group.getDescription()}"></span>
             </div>
         </div>
 
