--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,38 +1,37 @@
 <!DOCTYPE html>
 
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
-    <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" rel="stylesheet">
-    <meta charset="UTF-8">
-    <title th:text="'MOPS - ' + ${error}"></title>
-</head>
+<html lang="de" xmlns:th="http://www.thymeleaf.org" th:replace="~{mopslayout :: html(
+    name='Gruppenfindung',
+    title='Error',
+    headcontent=~{fragments/general :: headcontent(style='/error.css')},
+    navigation=~{fragments/general :: nav(current='index')},
+    bodycontent=~{:: bodycontent})}">
+
 <body>
-<div class="mx-auto" style="vertical-align: center; border-radius: 5px; horiz-align: center; top: 50%; left: 50%;">
-    <div class="jumbotron" style="background: aliceblue;">
-        <div class="container">
-            <h1 class="display-3">UPSI</h1>
-            <p class="lead">Da ist wohl etwas schiefgelaufen :(</p><br>
-        </div>
-    </div>
+
+<main th:fragment="bodycontent">
     <div class="container">
-        <div class="card mb-4 shadow-sm">
-            <div class="card-header">
-                <h4 class="my-0 font-weight-normal" th:text="${status} + ': ' + ${error}"></h4>
-            </div>
-            <div class="card-body">
-                <p th:text="${message}"></p>
+
+        <h1 class="display-3 def-cursor">UPSI</h1>
+
+        <div class="content">
+            <p class="lead def-cursor">Da ist wohl etwas schiefgelaufen :(</p>
+
+            <div class="content-text-in">
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="my-0 font-weight-normal" th:text="${status} + ': ' + ${error}"></h4>
+                    </div>
+                    <div class="card-body">
+                        <p th:text="${message}"></p>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <button class="btn btn-primary"
-                style="background: #52a1eb; border-style: none;">
-            <a href="#" onclick="window.history.back(-1);return false;" role="button"
-               style="color: white;">Zurück</a>
-        </button>
     </div>
-</div>
+</main>
+
+
 </body>
 </html>
