--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -29,3 +29,12 @@
     margin-right: 0;
     box-shadow: inset 0 .125rem .25rem rgba(0, 0, 0, .25);
 }
+
+.float-right {
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.content:hover .float-right {
+    margin-right: 0;
+}
