--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -9,7 +9,7 @@
 <body>
 
 <main th:fragment="bodycontent">
-    <div class="container-fluid">
+    <div class="container">
 
         <h1 class="def-cursor">Neue Gruppe</h1>
 
