--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -21,7 +21,7 @@
             <a th:href="@{/gruppen2/create}">Erstellen</a>
         </li>
         <li th:class="${current == 'search'} ? 'active' : ''">
-            <a th:href="@{/gruppen2/search}">Suche</a>
+            <a th:href="@{/gruppen2/search}">Suchen</a>
         </li>
     </ul>
 </nav>
