--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -1,40 +1,31 @@
 /*Grouplist Hover Effect*/
 .content {
+    padding-right: 20px;
     background: #e6f4ff;
     box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075);
-    transition: 100ms;
 }
 
 .content:hover {
+    padding-right: 10px;
     background: #d4ecff;
     box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .25);
 }
 
-.content-heading {
-    transition: 100ms;
-}
-
 .content:hover .content-heading {
-    margin-left: 5px;
     padding-bottom: 10px;
+    padding-left: 10px;
 }
 
 .content-text-in {
-    margin-right: 10px;
     box-shadow: inset 0 .125rem .25rem rgba(0, 0, 0, .075);
-    transition: 100ms;
 }
 
 .content:hover .content-text-in {
-    margin-right: 0;
     box-shadow: inset 0 .125rem .25rem rgba(0, 0, 0, .25);
 }
 
-.float-right {
-    margin-right: 10px;
+/*Badges*/
+.badge-pill {
     margin-left: 10px;
-}
-
-.content:hover .float-right {
-    margin-right: 0;
+    align-self: flex-end;
 }
