--- a/src/main/resources/static/search.css
+++ b/src/main/resources/static/search.css
@@ -1,9 +1,9 @@
-.top {
+/*Grouplist*/
+.content.top {
     padding: 10px 10px !important;
     margin-bottom: 15px !important;
 }
 
-/*Grouplist Hover Effect*/
 .content {
     margin-top: 5px;
     padding: 5px 5px;
@@ -11,10 +11,17 @@
 
 .content-heading {
     margin-bottom: 5px;
-    transition: 100ms;
 }
 
 .content-text-in {
+    box-shadow: none;
     margin-bottom: 0;
     padding: 5px;
+}
+
+/*Badges*/
+.badge-pill {
+    align-self: flex-start;
+    margin-top: 2px;
+    margin-right: 5px;
 }
