--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -15,6 +15,7 @@
     padding: 10px 10px;
     margin-top: 15px;
     box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .25);
+    transition: 100ms;
 }
 
 /*Content Heading*/
@@ -23,14 +24,22 @@
     font-weight: bold;
     font-optical-sizing: auto;
     overflow-wrap: break-word;
+    transition: 100ms;
 }
 
-.content-text {
-    margin-bottom: 15px;
-    cursor: default;
+.content-heading .link {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 /*Content Paragraph*/
+.content-text {
+    margin-bottom: 15px;
+    cursor: default;
+    transition: 100ms;
+}
+
 .content-text-in {
     background: whitesmoke;
     border-radius: 5px;
@@ -38,6 +47,7 @@
     margin-bottom: 15px;
     cursor: default;
     box-shadow: inset 0 .125rem .25rem rgba(0, 0, 0, .25);
+    transition: 100ms;
 }
 
 .content-text-in div {
@@ -56,34 +66,36 @@
 }
 
 /*Badges*/
-.lecture {
+.badge-pill {
     cursor: default;
     color: whitesmoke;
+}
+
+.lecture {
     background: var(--info);
 }
 
 .public {
-    cursor: default;
-    color: whitesmoke;
     background: var(--primary);
 }
 
 .private {
-    cursor: default;
-    color: whitesmoke;
     background: var(--secondary);
 }
 
 .parent {
-    cursor: default;
-    color: whitesmoke;
     background: var(--warning);
 }
 
-/*Positioning*/
-.float-right {
-    float: right;
-    transition: 100ms;
+/*Grid System*/
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.col {
+    padding-left: 0;
+    padding-right: 0;
 }
 
 /*Miscellanous*/
