--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -13,7 +13,7 @@
     border-radius: 5px;
     background: #d4ecff;
     padding: 10px 10px;
-    margin-top: 15px;
+    margin-bottom: 15px;
     box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .25);
     transition: 100ms;
 }
