fix admin role badge

--- a/src/main/resources/static/details.css
+++ b/src/main/resources/static/details.css
@@ -18,8 +18,19 @@
     align-self: start;
 }
 
+.members .badge {
+    align-self: start;
+    margin-top: 2px;
+}
+
 /*Member List*/
 .members {
     overflow-y: auto;
     max-height: calc(100vh - 250px);
+}
+
+.members li span {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
