--- a/src/main/resources/templates/fragments/gruppen.html
+++ b/src/main/resources/templates/fragments/gruppen.html
@@ -29,6 +29,12 @@
         <input type="file" class="custom-file-input" id="file" th:name="file">
         <label class="custom-file-label" for="file">Datei auswählen</label>
     </div>
+    <script>
+        $(".custom-file-input").on("change", function () {
+            const fileName = $(this).val().split("\\").pop();
+            $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+        });
+    </script>
 </div>
 
 <!--Gruppentyp-->
@@ -65,12 +71,13 @@
 <th:block th:fragment="userlimit">
     <label for="userlimit">Teilnehmeranzahl:</label>
     <div class="btn-toolbar row mx-0" id="userlimit">
+        <input type="hidden" name="userlimit" id="limit" value="9223372036854775807">
         <div class="btn-group btn-group-toggle col-sm-4 px-0" data-toggle="buttons">
-            <label class="btn btn-secondary active" onclick="disable('#limitselect')">
-                <input type="radio" name="userlimit" value="9223372036854775807" checked>
+            <label class="btn btn-secondary active" onclick="disable('#limitselect'); enable('#limit')">
+                <input type="radio" checked>
                 Unbegrenzt
             </label>
-            <label class="btn btn-secondary" onclick="enable('#limitselect')">
+            <label class="btn btn-secondary" onclick="enable('#limitselect'); disable('#limit')">
                 <input type="radio"> Begrenzt
             </label>
         </div>
