--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -22,7 +22,7 @@
                 <!--Spacer-->
                 <span class="col"></span>
 
-                <form method="post" th:action="@{/gruppen2/details/{id}/destroy(id=${group.getId()})}">
+                <form method="post" th:action="@{/gruppen2/details/{id}/edit/destroy(id=${group.getId()})}">
                     <button class="btn btn-danger btn-bar" type="submit">Gruppe löschen
                     </button>
                 </form>
