--- a/src/main/resources/templates/fragments/gruppen.html
+++ b/src/main/resources/templates/fragments/gruppen.html
@@ -86,7 +86,8 @@
             <div class="input-group-prepend">
                 <span class="input-group-text text-monospace">Limit:</span>
             </div>
-            <input type="number" class="form-control" name="userlimit" value="1"
+            <input type="number" class="form-control" name="userlimit"
+                   th:value="${group != null} ? ${#numbers.formatInteger(group.getUserLimit(), 5)} : '1'"
                    min="1" max="100000" id="limitselect" required disabled>
             <div class="input-group-append">
                 <span class="input-group-text text-monospace">Teilnehmer</span>
@@ -101,7 +102,8 @@
         <div class="input-group-prepend">
             <span class="input-group-text text-monospace">Gruppentitel:</span>
         </div>
-        <input type="text" class="form-control" th:name="title" required>
+        <input type="text" class="form-control" th:name="title" th:value="${group?.getTitle()}"
+               required>
     </div>
 
     <!--Gruppenbeschreibung-->
@@ -109,6 +111,7 @@
         <div class="input-group-prepend">
             <span class="input-group-text text-monospace">Beschreibung:</span>
         </div>
-        <textarea class="form-control" th:name="description" required></textarea>
+        <textarea class="form-control" th:name="description" th:text="${group?.getDescription()}"
+                  required></textarea>
     </div>
 </th:block>
