--- a/src/main/resources/templates/fragments/gruppen.html
+++ b/src/main/resources/templates/fragments/gruppen.html
@@ -74,8 +74,7 @@
         <input type="hidden" name="userlimit" id="limit" value="9223372036854775807">
         <div class="btn-group btn-group-toggle col-sm-4 px-0" data-toggle="buttons">
             <label class="btn btn-secondary active" onclick="disable('#limitselect'); enable('#limit')">
-                <input type="radio" checked>
-                Unbegrenzt
+                <input type="radio" checked> Unbegrenzt
             </label>
             <label class="btn btn-secondary" onclick="enable('#limitselect'); disable('#limit')">
                 <input type="radio"> Begrenzt
@@ -87,7 +86,7 @@
                 <span class="input-group-text text-monospace">Limit:</span>
             </div>
             <input type="number" class="form-control" name="userlimit"
-                   th:value="${group != null} ? ${#numbers.formatInteger(group.getUserLimit(), 5)} : '1'"
+                   th:value="${group != null} ? ${group.getUserLimit()} : '1'"
                    min="1" max="100000" id="limitselect" required disabled>
             <div class="input-group-append">
                 <span class="input-group-text text-monospace">Teilnehmer</span>
