--- a/src/main/resources/templates/preview.html
+++ b/src/main/resources/templates/preview.html
@@ -2,7 +2,7 @@
 <html lang="de" xmlns:th="http://www.thymeleaf.org" th:replace="~{mopslayout :: html(
     name='Gruppenbildung',
     title='Details',
-    headcontent=~{fragments/general :: headcontent('/details.css')},
+    headcontent=~{fragments/general :: headcontent('details')},
     navigation=~{fragments/general :: nav('none')},
     bodycontent=~{:: bodycontent})}">
 
