--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -2,8 +2,8 @@
 <html lang="de" xmlns:th="http://www.thymeleaf.org" th:replace="~{mopslayout :: html(
     name='Gruppenbildung',
     title='Neue Gruppe',
-    headcontent=~{fragments/general :: headcontent(style='none')},
-    navigation=~{fragments/general :: nav(current='create')},
+    headcontent=~{fragments/general :: headcontent('none')},
+    navigation=~{fragments/general :: nav('create')},
     bodycontent=~{:: bodycontent})}">
 
 <body>
@@ -19,20 +19,20 @@
             <form enctype="multipart/form-data" method="post" th:action="@{/gruppen2/create}">
 
                 <!--Titel + Beschreibung-->
-                <div class="content-text" th:insert="~{fragments/gruppen :: meta}"></div>
+                <div class="content-text" th:insert="~{fragments/forms :: meta}"></div>
 
                 <!--TODO: Enter AsciiDoc Description-->
 
                 <div class="content-text-in">
                     <!--Gruppentyp-->
-                    <div th:replace="~{fragments/gruppen :: grouptype}"></div>
+                    <div th:replace="~{fragments/forms :: grouptype}"></div>
 
                     <!--Benutzerlimit-->
-                    <div th:replace="~{fragments/gruppen :: userlimit}"></div>
+                    <div th:replace="~{fragments/forms :: userlimit}"></div>
                 </div>
 
                 <!--CSV Import-->
-                <div class="content-text" th:insert="~{fragments/gruppen :: csvimport}"></div>
+                <div class="content-text" th:insert="~{fragments/forms :: csvimport}"></div>
 
                 <!--Submit-->
                 <button class="btn btn-primary btn-block" type="submit">Gruppe Erstellen</button>
