--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -2,8 +2,8 @@
 <html lang="de" xmlns:th="http://www.thymeleaf.org" th:replace="~{mopslayout :: html(
     name='Gruppenbildung',
     title='Gruppe verwalten',
-    headcontent=~{fragments/general :: headcontent(style='none')},
-    navigation=~{fragments/general :: nav(current='none')},
+    headcontent=~{fragments/general :: headcontent('none')},
+    navigation=~{fragments/general :: nav('none')},
     bodycontent=~{:: bodycontent})}">
 
 <body>
@@ -53,7 +53,7 @@
                 <form th:action="@{/gruppen2/details/{id}/edit/meta(id=${group.getId()})}"
                       method="post">
 
-                    <div th:replace="~{fragments/gruppen :: meta}"></div>
+                    <div th:replace="~{fragments/forms :: meta}"></div>
                     <div class="row">
                         <span class="col"></span>
                         <button type="submit" class="btn btn-secondary mt-2">Speichern</button>
@@ -66,7 +66,7 @@
                 <form th:action="@{/gruppen2/details/{id}/edit/userlimit(id=${group.getId()})}"
                       method="post">
 
-                    <div th:replace="~{fragments/gruppen :: userlimit}"></div>
+                    <div th:replace="~{fragments/forms :: userlimit}"></div>
                     <div class="row">
                         <span class="col"></span>
                         <button type="submit" class="btn btn-secondary mt-2">Speichern</button>
@@ -80,7 +80,7 @@
                       th:if="${account.getRoles().contains('orga')}"
                       enctype="multipart/form-data" method="post">
 
-                    <div th:replace="~{fragments/gruppen :: csvimport}"></div>
+                    <div th:replace="~{fragments/forms :: csvimport}"></div>
                     <div class="row">
                         <span class="col"></span>
                         <button type="submit" class="btn btn-secondary mt-2">Speichern</button>
@@ -99,8 +99,7 @@
                 <li class="list-group-item d-flex justify-content-between" th:each="member : ${group.getMembers()}">
                     <div>
                         <span th:text="${member.getGivenname()  + ' ' + member.getFamilyname().charAt(0) + '.'}"></span>
-                        <span class="badge badge-success align-self-start ml-2"
-                              th:if="${group.getRoles().get(member.getId()) == admin}">Admin</span>
+                        <span th:replace="~{fragments/gruppen :: userbadges}"></span>
                     </div>
 
                     <div class="d-flex">
