--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,8 +3,8 @@
 <html lang="de" xmlns:th="http://www.thymeleaf.org" th:replace="~{mopslayout :: html(
     name='Gruppenfindung',
     title='Error',
-    headcontent=~{fragments/general :: headcontent(style='none')},
-    navigation=~{fragments/general :: nav(current='none')},
+    headcontent=~{fragments/general :: headcontent('none')},
+    navigation=~{fragments/general :: nav('none')},
     bodycontent=~{:: bodycontent})}">
 
 <body>
