--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -9,10 +9,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/22c0caaa8a.js" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" th:src="@{/script.js}"></script>
+    <script type="text/javascript" th:src="@{/js/script.js}"></script>
 
-    <link th:href="@{/style.css}" rel="stylesheet"/>
-    <link th:unless="${style == 'none'}" th:href="@{${style}}" rel="stylesheet"/>
+    <link th:href="@{/css/style.css}" rel="stylesheet"/>
+    <link th:unless="${style == 'none'}" th:href="@{'/css/' + ${style} + '.css'}" rel="stylesheet"/>
 </th:block>
 
 <!--Left navigation bar-->
