--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -2,8 +2,8 @@
 <html lang="de" xmlns:th="http://www.thymeleaf.org" th:replace="~{mopslayout :: html(
     name='Gruppenbildung',
     title='Suchen',
-    headcontent=~{fragments/general :: headcontent(style='/search.css')},
-    navigation=~{fragments/general :: nav(current='search')},
+    headcontent=~{fragments/general :: headcontent('search')},
+    navigation=~{fragments/general :: nav('search')},
     bodycontent=~{:: bodycontent})}">
 
 <body>
